Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
Unexpected results
-
Q3/2026 Server Maintenance
Description
h6.MTR testcase to repro issue: (Say example.test)
|
{code:sql}
|
CREATE TABLE v1 (a int);
|
EXPLAIN EXTENDED SELECT * from v1;
|
DROP TABLE v1;
|
|
|
CREATE TABLE t1 (a int);
|
CREATE VIEW v1 AS SELECT * FROM t1;
|
|
|
EXPLAIN EXTENDED SELECT * from v1;
|
|
|
DROP VIEW v1;
|
DROP TABLE t1;
|
How to repro
./mtr example.test --record |
./mtr example.test --replay-server |
Attachments
Issue Links
- is caused by
-
MDEV-39368 Add mtr --replay-server option to test Optimizer Context Replay
-
- In Progress
-